--- a/src/app/src/_modules/home/course-detail/course-detail.component.html
+++ b/src/app/src/_modules/home/course-detail/course-detail.component.html
@@ -2,11 +2,15 @@
 <div class="container-fluid">
     <section class="overlay">
         <div class="course-intro">
-            <h3 class="display-4">Tên Khóa học</h3>
-            <span>Đánh giá khóa học</span>
+            <h3 class="display-4">{{thongTinKH.TenKH}}</h3>
+            <span>Đánh Giá</span>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
             <br>
-            <a class="btn btn-success btn-start waves-light" mdbWavesEffect>Bắt đầu học</a>
+            <a class="btn btn-success btn-start waves-light" mdbWavesEffect routerLink="/watch">Bắt đầu học</a>
         </div>
     </section>
     <div class="row">
