--- a/src/app/src/_modules/home/course-detail/course-detail.component.css
+++ b/src/app/src/_modules/home/course-detail/course-detail.component.css
@@ -93,3 +93,7 @@ color: #555;
     box-shadow: 0 1px 1px rgba(0,0,0,0.3);
     background: #ffffff;
 }
+.fa-star{
+    color:yellow;
+    margin-right: 10px;
+}
