--- a/src/app/src/_modules/home/header/header.component.css
+++ b/src/app/src/_modules/home/header/header.component.css
@@ -1,4 +1,13 @@
-ul {
+/* li ul { display: none; } */
+  
+  ul li a {
+    display: block;
+    padding: 1em;
+    text-decoration: none;
+    white-space: nowrap;
+    /* color: #fff; */
+  }
+/* ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -13,56 +22,101 @@ ul {
   }
   
   /* This hides the dropdowns */
-  
-  
-  li ul { display: none; }
-  
-  ul li a {
-    display: block;
-    padding: 1em;
-    text-decoration: none;
-    white-space: nowrap;
-    color: #fff;
+  .navbar.navbar-expand-lg links ,.navbar.navbar-expand-lg navlink{
+    width: initial!important;
   }
-  
-  ul li a:hover { background: #2c3e50; }
-  
-  /* Display the dropdown */
+
   
   
-  li:hover > ul {
+  /* ul li a:hover { background: #2c3e50; }  */
+  
+   li:hover > ul {
     display: block;
     position: absolute;
   }
   
   li:hover li { float: none; }
   
-  li:hover a { background: #2c3e50; }
+  /* li:hover a { background: #2c3e50; } */
   
-  li:hover li a:hover { background: #2c3e50; }
+  /* li:hover li a:hover { background: #2c3e50; } */
   
-  .main-navigation li ul li { border-top: 0; }
+  .main-navigation li ul li { border-top: 0; } 
   
   /* Displays second level dropdowns to the right of the first level dropdown */
   
-  
+/*   
   ul ul ul {
     left: 100%;
     top: 0;
-  }
+  } */
   
   /* Simple clearfix */
   
   
   
-  ul:before,
+  /* ul:before,
   ul:after {
     content: " "; /* 1 */
-    display: table; /* 2 */
-  }
+    /* display: table; 2 */
+  /* }
   
   ul:after { clear: both; }
 
   .dropdown-menu{
       background-color: #2c3e50;
+  }  */
+  .col-width-lg { margin: 0 auto; }
+.course-home-menutop {display: flex;}
+.course-logo { padding: 13px 0 15px 0; }
+.course-menu-cate { display: inline-block;    margin: 25px 0 0 16px; cursor: pointer; position: relative; color: #555}
+.course-menu-cate i { font-size: 18px; margin-right: 5px; vertical-align: middle; }
+.course-form {    font-size: 13px;   font-style: italic;    height: 40px;    width: 99% !important;}
+.course-btn-search { box-shadow: none;   position: absolute;    right: 28px;    top: 12px;  background: transparent;   color: #f26c4f;    font-size: 20px; padding: 6px 20px;}
+.course-search-boxtop { margin-top: 13px; }
+.course-active-course { border: 1px solid #555; padding: 9px 10px; border-radius: 3px; display: inline-block; color: #555; margin-top: 13px; }
+.course-active-course:hover { background: #f26c4f; color: #fff; border:1px solid #ccc; }
+.course-active-course i {margin-right: 5px;}
+.course-cart { color: #999; margin-left: 10px; position: relative; }
+.course-cart i { font-size: 24px; }
+.course-sl-cart { font-size: 10px; border-radius: 25px; border: 1px solid #ccc; position: absolute; top: -14px; left: 18px; padding: 1px 5px; }
+.course-acc-zone { float: right; margin-top: 13px; }
+.course-acc-zone li { display: inline-table; }
+.course-reg-acc { border: 1px solid #555; padding: 9px 19px; border-radius: 3px; display: inline-block; color: #555 }
+.course-log-acc { border: 1px solid #f26c4f; padding: 9px 10px; border-radius: 3px; display: inline-block; color: #fff; background: #f26c4f; }
+.amazonmenu {visibility: hidden;    opacity: 0;    position: absolute; padding-top: 18px;}
+.course-menu-cate:hover .amazonmenu { visibility: visible; opacity: 1; }
+.amazonmenu:after, .amazonmenu:before {    left: 14px;   right: auto;}
+.amazonmenu:after {   border-color: transparent transparent #fff;    top: 5px;}
+.amazonmenu:before {    border-color: transparent transparent #282828;    top: 5px;}
+.amazonmenu:after, .amazonmenu:before {    border-style: solid;    border-width: 0 10px 13px;    content: "";    height: 0;    position: absolute;    right: 14px;    width: 0;}
+.hassub i { width: 30px; text-align: center; }
+.amazonmenu ul{	list-style: none;	margin: 0;	padding: 0;	-moz-box-sizing: border-box;	-webkit-box-sizing: border-box;	box-sizing: border-box; font-size: 14px;}
+.amazonmenu ul li{	position: static; }
+.amazonmenu > ul{	background: #fff;	border: 1px solid #eee; width: 250px; height: 360px; position: relative; box-shadow: 1px 1px 1px #ccc; z-index:  99 }
+.amazonmenu > ul li a{	color: #242424;	display: block;	overflow: auto;	padding: 10px 0;	position: relative;	text-decoration: none;	text-indent: 10px;}
+.amazonmenu > ul li.hassub > a::after{ 	border: 5px solid transparent;	border-left-color: gray; content: '';	height: 0;	position: absolute;	right: 5px;	top: 35%;	width: 0;}
+.amazonmenu > ul li.hassub.selected > a::after{ 	border-left-color: #f58829;}
+.amazonmenu ul li a:hover, .amazonmenu ul li.hassub.selected > a{ background: #f7f8fa;	color: #0975b4;}
+.amazonmenu ul li > div, .amazonmenu ul li > ul{ background: #f7f8fa;	border: 1px solid #eee;	box-shadow: 1px 1px 1px #ccc;	display: none;	font-weight: normal;	width: 305px;
+    height: 360px; 	left: 100%;	padding: 0 10px;	position: absolute;	top: -1px;	-webkit-box-sizing: border-box;	-moz-box-sizing: border-box;	box-sizing: border-box;	z-index: 999;}
+.course-active-course p { display: inline; }
+.right-menu a{
+  margin-right:5px;
+}
+.menu-mobile{
+  display:none;
+}
+/* Responsive */
+@media (max-width:767px) {
+  .course-home-menutop{
+    display:none;
   }
+  .menu-mobile{
+    display: block;
+  }
+  .menu-mobile-top a{
+    margin-right: 15px;
+    font-size: 16px;
+  }
+}
